# bevy-game-2

./: Cargo.toml
.github/workflows/: static_analysis.yml  test.yml
ci/: Dockerfile.clippy  Dockerfile.test  docker-bake.hcl
src/: chess_plugin.rs  components.rs  cursor_style.rs  main.rs  resources.rs
src/chess_plugin/: board.rs  mod.rs
src/index_slot_map/: mod.rs
