[package]
name = "bevy-game-2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bevy = { version = "0.16.0", features = ["bevy_dev_tools"] }
cozy-chess = { version = "0.3.4" }
derive_more = { version = "2.0.1", features = ["full"] }
indexmap = "2.9.0"
num_enum = "0.7.3"
slotmap = "1.0.7"
stable-vec = "0.4.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
panic = "abort"
